syntax = "proto3";

package grpc.post_crud;

option go_package = "pkg/post_crud;post_crud_pb";

service PostCRUDService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message Post {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
}

message CreateRequest {
    Post post = 1;
}

message CreateResponse {
    string status = 1;
}

message ReadRequest {
    optional int32 id = 1;
}

message ReadResponse {
    repeated Post post = 1;
}

message UpdateRequest {
    int32 id = 1;
    optional int32 new_id = 2;
    optional int32 new_user_id = 3;
    optional string new_title = 4;
    optional string new_body = 5;
}

message UpdateResponse {
    string status = 1;
}

message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse {
    string status = 1;
}